# tracker-system

./: .gitignore  HLD.md  README.md  download_models.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: compare.py  search_scale.py
benchmarks/results/: 2026-07-04-embeddings.md  2026-07-04-search-scale.md  2026-07-04-tracker-and-scale.md  2026-07-05-ambiguity-rejection.md  2026-07-05-hud-overlay.md  2026-07-05-identity-floor.md  2026-07-05-structural-signal.md  2026-07-05-tracker-bakeoff.md
configs/: default.yaml
src/: appearance.py  cli.py  config.py  geometry.py  loss.py  motion.py  output.py  overlay.py  pipeline.py  reacquire.py  selection.py  trackers.py  video.py
src/tracker_system/: __init__.py  appearance.py  cli.py  config.py  geometry.py  overlay.py  pipeline.py  reacquire.py  selection.py  trackers.py  video.py
src/tracker_system/app/: __init__.py  cli.py  pipeline.py  state.py
src/tracker_system/config/: __init__.py  settings.py
src/tracker_system/loss/: __init__.py  detector.py
src/tracker_system/metrics/: __init__.py  fps.py
src/tracker_system/motion/: __init__.py  ego_motion.py
tests/integration/: test_pipeline.py
tests/unit/: test_appearance.py  test_config.py  test_ego_motion.py  test_fps.py  test_geometry.py  test_loss.py  test_loss_detector.py  test_matcher.py  test_motion.py  test_overlay.py  test_profile.py  test_reacquire.py  test_reacquisition_engine.py  test_selection.py  test_state.py  test_tracker_factory.py  test_trackers.py  test_video.py  test_video_source.py
(+19 files in other folders)
