[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker-system"
version = "1.0.0"
description = "Real-Time Arbitrary Object Tracking & Re-acquisition System (CPU-first)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.9",
    "numpy>=1.24",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tracker-system = "tracker_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Make the src/ layout importable in tests without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
